# reanalysis-api

./: Dockerfile  README.md  pyproject.toml
data/: era5_vertical.txt
reanalysis_api/: lifespan.py  main.py  models.py  pool.py
reanalysis_api/datasources/: __init__.py  era5.py
